--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
+astroid==1.6.1
+autopep8==1.3.4
 click==6.7
 Flask==0.12.2
+Flask-Login==0.4.0
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 gunicorn==19.7.1
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
+psycopg2==2.7.4
+pycodestyle==2.3.1
+pylint==1.8.2
+six==1.11.0
 SQLAlchemy==1.2.5
 Werkzeug==0.14.1
+wrapt==1.10.11
+WTForms==2.1
