--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 astroid==1.6.1
 autopep8==1.3.4
 click==6.7
+decorator==4.3.0
 Flask==0.12.2
 Flask-Login==0.4.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.7.1
+infinity==1.4
+intervals==0.8.1
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -17,6 +20,8 @@ pycodestyle==2.3.1
 pylint==1.8.2
 six==1.11.0
 SQLAlchemy==1.2.5
+validators==0.12.1
 Werkzeug==0.14.1
 wrapt==1.10.11
 WTForms==2.1
+WTForms-Components==0.10.3
